--- a/dashboard/src/styles/relationshipLineage.scss
+++ b/dashboard/src/styles/relationshipLineage.scss
@@ -45,5 +45,6 @@
 .value-text {
   a {
     width: 100% !important;
+    word-break: break-all;
   }
 }
